--- a/urban-octo-telegram/Develop/index1.html
+++ b/urban-octo-telegram/Develop/index1.html
@@ -21,25 +21,25 @@
         </nav>
     </header>
 <main>
-    <img src="assets/images/digital-marketing-meeting.jpg" alt="Group of people at a table discussing about a topic" class="hero"/>
+    <img src="assets/images/digital-marketing-meeting.jpg" class="hero"/>
     <div class="content"></div>
     <section class="content">
         <div class="contents1">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="Piece of paper with SEO written on it. With pens and highlighters surrounding it." class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
         <div id="contents1" class="contents1">
-            <img src="./assets/images/online-reputation-management.jpg" alt="Macbook displaying a graph with an upward trend." class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
         <div id="contents1" class="contents1">
-            <img src="./assets/images/social-media-marketing.jpg" alt="Group of people at a table with text bubbles quoting different words. Share, Like, and Media" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -71,7 +71,7 @@
     </aside>
 </main>
     <footer class="footer">
-        <h4>Made with ❤️️ by Horiseon</h4>
+        <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
